# smonky

./: README.md  compile_and_run.sh
src/: main.c  meson.build
